test/oscar/compiler/errors/invalidAccess.oscar
def main() => unit = {
  list<int> l1 = list<int>[1, 2, 3, 4, 5]; 
  int x = l1["0"];
}